--- a/interactive-comment-section/src/styles/style.scss
+++ b/interactive-comment-section/src/styles/style.scss
@@ -357,11 +357,12 @@ form {
 // 	filter: brightness(50%);
 // }
 
-section.delete {
+form.delete {
 	position: fixed;
 	width: 100vw;
 	height: 100vh;
 	z-index: 1;
+	background-color: transparent;
 }
 
 .delete-container {
