added shaded background behind delete pop up when delete button clicked

--- a/interactive-comment-section/src/styles/style.css
+++ b/interactive-comment-section/src/styles/style.css
@@ -312,9 +312,14 @@ form .submit:hover {
 form.delete {
   position: fixed;
   width: 100vw;
-  height: 100vh;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  height: calc(100vh + 6rem);
   z-index: 1;
-  background-color: transparent;
+  background-color: black;
+  opacity: 0.5;
 }
 
 .delete-container {
@@ -327,7 +332,7 @@ form.delete {
   padding: 2rem;
   border-radius: 6px;
   opacity: 1;
-  border: 2px solid black;
+  z-index: 2;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -372,5 +377,5 @@ form.delete {
   background-color: hsl(211, 10%, 45%);
 }
 .delete-container .btns button.cancel:hover {
-  background-color: hsl(238, 40%, 52%);
+  background-color: hsl(239, 57%, 85%);
 }/*# sourceMappingURL=style.css.map */
