--- a/weather/src/styles/style.scss
+++ b/weather/src/styles/style.scss
@@ -49,11 +49,16 @@ ul {
 	list-style-type: none;
 }
 
+#root {
+	width: 100%;
+	height: 100%;
+}
+
 // ============
-// root
+// master container
 // ============
 
-#root {
+#master-container {
 	display: grid;
 	grid-template-columns: 1fr 2fr;
 	height: 100vh;
@@ -290,13 +295,13 @@ ul {
 }
 
 @media only screen and (max-width: 947px) {
-	body {
+	#master-container {
 		grid-template-columns: 1fr 1fr;
 	}
 }
 
 @media only screen and (max-width: 573px) {
-	body {
+	#master-container {
 		grid-template-columns: 1fr;
 	}
 }
